# pyimg-converter

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
src/pyimg_converter/: __init__.py  convert.py
src/pyimg_converter/converter/: __init__.py  base_converter.py  heic2image.py  pdf2images.py  pil_converter.py
tests/: unittests.py
tests/samples/: sample.txt
