[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyimg_converter"
authors = [
    {name = "Vision Team", email = "vision@abc.com"},
]
description = "Convert file (*.heic, *.tiff, *.jpg, *.pdf) to images (*.png)."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pillow>=7.0.0",
    "pillow_heif>=0.5.0",
    "pypdfium2"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["unittest"]

[project.urls]
Documentation = "https://github.com/zero-nnkn/pyimg-converter/tree/main#readme"
Source = "https://github.com/zero-nnkn/pyimg-converter"
Tracker = "https://github.com/zero-nnkn/pyimg-converter/issues"